<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_wishlist_black_24dp"
            android:title="@string/menu_wishList" />
        <item
            android:id="@+id/nav_career_test"
            android:icon="@drawable/ic_career_test_24dp"

            android:title="@string/menu_career_test" />

        <item
            android:id="@+id/nav_job_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_jobList" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_applications_black_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us_24dp"
                android:title="@string/menu_about_us" />
        </menu>
    </item>

</menu>
